--- a/style.css
+++ b/style.css
@@ -4,10 +4,18 @@
     padding: 0;
     background-color: rgb(61, 210, 230);
 }
-li, a, button{
+
+.logo{
+    color: white;
+    margin-left: 1em;
+    font-family: "Walter", sans-serif;
+    text-decoration: none;
+    font-size: 24px;
+}
+li, .link, button{
     font-family: "Montserrat", sans-serif;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 20px;
     color: black;
     text-decoration: none;
 }
@@ -25,29 +33,7 @@ li {
     padding: 0px 20px;
 }
 
-h1{
-    margin-left: 2em;
-    font-family: "Montserrat", sans-serif;
-}
 
-.container {
-    max-width: 1400px;
-    margin: 0 auto;
-}
-
-.results {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.result {
-    margin: 2em;
-    padding: 2em;
-    max-width: 250px;
-    background: white;
-    border: 1.5px solid grey;
-    border-radius: 2rem;
-}
 
 .loader {
     border: 16px;
@@ -77,10 +63,11 @@ p{
     font-family: "Montserrat", sans-serif;
     background-color: rgb(4, 104, 117);
     color: white;
-    font-size: 24px;
-    padding: 0.5rem;
+    font-size: 20px;
+    padding: 10px 100px;
 }
 
 img{
     background-color: rgb(4, 104, 117);
+    padding: 10px 100px;
 }
